second and third chapter

--- a/02.一切皆对象.md
+++ b/02.一切皆对象.md
@@ -77,3 +77,15 @@ Java系统必须知道存储在堆栈内所有项的的确切生命周期。
 通过对象调用方法的行为通常被称为*发送消息给对象*。
 
 方法调用时传递的参数同样是类的**引用**。
+
+## 2.5 构建Java程序
+
+- 通过**import**指示编译器导入一个包，即一个类库
+
+  **java.lang**会被自动导入到每一个Java文件中
+
+- 用**static**关键字使得域或方法与类的任何对象实例无关，这种域和方法称为*类数据*、*类方法*。
+
+- **javadoc**是JDK中用于提取注释的工具，输出HTML文件
+
+  javadoc只能为**public**、**protected**成员进行文档注释，**private**和包内可访问成员的注释会被忽略掉。
