--- a/03.操作符.md
+++ b/03.操作符.md
@@ -23,4 +23,98 @@
 - 基本类型的赋值，存储的是实际的数值，是将一个地方的内容复制到了另一个地方
 - **对象**赋值的时候，操作的不是对象本身，而是将一个对象的**引用**从一个地方复制到另一个地方。
 
-### 3.2.2
+### 3.2.2 算术操作符
+
+加（+）、减（-）、乘（*）、除（/）、取模（%）。
+
+【注意】
+
+- 一元减号（-）和一元加号（+）与二元减号和加号都是用相同的符号，根据表达式的书写形式，编译器会自动判断。
+
+- 一元减号用于转变数据的符号
+
+  x = -a;
+
+- 一元加号只是为了与一元减号相对应，但是它唯一的作用仅仅是将较小类型的操作数提升为int。
+
+  ```java
+  byte a = 47;
+  byte b = (byte) +a;//正确
+  int c = +a;//正确
+  byte d = +a;//错误
+  ```
+
+### 3.2.3 关系操作符
+
+符号：大于（>）、小于（<）、大于等于（>=）、小于等于（<=）、等于（==）、不等于（!=）。
+
+关系操作符生成的是一个boolean（布尔）结果。
+
+**等于**和**不等于**适用于所有的基本数据类型，而其他比较符不适用于boolean类型。
+
+【注意】
+
+- 对于基本数据类型，== 和 != 比较的是**值**。
+
+- 对于对象，== 和 != 比较的是对象的**引用**。
+
+  对象引用的比较还有个特殊方法**equals()**，默认行为也是比较引用。
+
+### 3.2.4 逻辑操作符
+
+符号：与（&&）、或（||）、非（!）。
+
+逻辑操作符**只可**操作boolean值，操作结果也是boolean值。
+
+在应该使用String值的地方使用了boolean值，boolean值会自动转换成适当的文本形式。
+
+与、或、非都是**短路**运算符。（如果表达式的值已经确定，后面未执行的表达式将不会执行）。
+
+### 3.2.5 按位操作符
+
+按位操作符用来操作**整数**基本数据类型中的单个bit位，对两个对应的位执行布尔代数运算。
+
+符号：按位“与”（&）、按位“或”（|）、按位“非”（~）、按位“亦或”（^）。
+
+- &：二元操作符，同时为1的时候结果才为1。
+- |：二元操作符，同时为0的时候结果才为0。
+- ~：一元操作符，取反操作符，结果是相反的值。
+- ^：二元操作符，有一个是1，但不全是1，结果才为1。
+
+### 3.2.6 移位操作符
+
+移位操作符操作的也是二进制的“位”。**只可**用来处理**整数**类型（注意是整数类型，不是整型int）。
+
+符号：左移（<<）、右移（>>）、无符号右移（>>>）。
+
+- **<<**：按照操作符右侧指定的位数将操作符左边的操作数向**左**移动，低位补0。
+- **>>**：按照操作符右侧指定的位数将操作符左边的操作数向**右**移动。使用「符号扩展」：若符号为正，则高位插入0；若符号为负，则高位插入1。
+- **>>>**：与**>>**的区别在于，使用「零扩展」，无论正负，都在高位插入0。
+
+【注意】
+
+- 对**char**、**byte**、**short**、类型的数值进行移位处理，在移位之前，会被转换成**int**类型，结果同样是**int**类型。只有数值的低5位才有效，因为int型值只有32位）。
+- 对**long**类型的数值进行移位处理，得到的结果是**long**类型。只有数值低6位有效。
+
+## 3.3 类型转换
+
+- 窄化转换
+
+  将能容纳更多信息的数据类型转换成无法容纳那么多信息的类型。编译器要求我们进行强制类型转换。
+
+- 扩展转换
+
+  将容纳较少信息的数据类型转换成容纳较多信息的类型。无须显示地进行类型转换。
+
+
+
+在将**float**或**double**类型转换为**int**时，总是对数字执行***截尾***。
+
+如果要想得到舍入的结果，可以使用java.lang.Math中的round()方法。
+
+
+
+---
+
+- 对基本类型执行算术运算或按位运算，只要类型比**int**小（即**char**、**byte**、**short**），在运算之前，都会自动转换成int。得到的结果也是int类型，如果要赋值给较小的类型，就必须进行类型转换。
+- 通常，表达式中出现的最大数据类型决定了表达式最终结果的数据类型。
