--- a/04.初始化与清理.md
+++ b/04.初始化与清理.md
@@ -89,5 +89,51 @@ f();
 
 垃圾回收器准备好释放对象占用的存储空间时，将首先调用对象的**finalize()**方法，并且在下一次垃圾回收动作发生时，才会真正回收对象占用的内存。
 
-这就导致finalize不一定会被调用。比
+而Java里的对象并非总是被垃圾回收，这就导致finalize不一定会被调用。因此，要做类似于「析构」的清理工作，必须自己动手创建一个执行清理工作的普通方法。
+
+无论是「垃圾回收」还是「终结」，都不保证一定会发生，如果Java虚拟机并未面临内存耗尽的情形，它是不会浪费时间去执行垃圾回收以恢复内存的。
+
+finalize通常使用在两种情况下：
+
+- 清理「通过某种创建对象方式以外的方式为对象分配了存储空间」。
+
+  例如，本地方法的C/C++代码使用**malloc()**来分配存储空间，这就需要在finalize方法中再调用C/C++中的**free()**来释放。
+
+- 作为对象的**终结条件**的验证
+
+
+
+
+*finalize()方法的更多详细解释和实例参考《Java编程思想》5.5节。*
+
+
+
+## 4.5 初始化
+
+### 4.5.1 成员初始化
+
+- 成员变量如果是基本类型，会有一个默认初始值（参考[02.一切皆对象](https://github.com/youngmeng/Java-Notes/blob/develop/02.%E4%B8%80%E5%88%87%E7%9A%86%E5%AF%B9%E8%B1%A1.md)）；如果是对象引用，会有一个默认值**null**。
+
+- 定义成员变量是可以为其赋值进行初始化；
+
+  可以调用某个方法进行初始化。
+
+### 4.5.2 构造器初始化
+
+- 构造器初始化无法阻止自动初始化的进行（即编译器添加默认值），因为自动初始化在构造器被调用**之前**发生。
+- 在类的内部，变量定义的先后顺序决定了初始化的顺序。即使变量定义散布于方法定义之间，它们仍旧会在任何方法（包括构造器）调用**之前**得到初始化。
+- 无论创建多少个对象，静态数据都只占用一份存储区域。静态成员的默认初始值和类成员一致。
+
+---
+
+【静态成员的初始化】
+
+假设有一个名为Dog的类，对象的创建过程：
+
+1. 即使没有显示地使用static关键字，构造器实际上也是静态方法。因此，当首次创建类型为Dog的对象时（构造器可看成静态方法），或者Dog类的静态方法/静态域首次被访问时，Java解释器必须查找类路径，以定位Dog.class文件。
+2. 然后载入Dog.class，有关静态初始化的所有动作都会执行。因此，静态初始化只在Class对象首次加载的时候进行一次。
+3. 当用new Dog()创建对象的时候，首先将在堆上为Dog对象分配足够的存储空间。
+4. 这块存储空间会被清零，这就自动地将Dog对象中的所有基本类型数据都设置成了默认值，而引用则被设置成了null。
+5. 执行所有出现于字段定义处的初始化动作。
+6. 执行构造器。
 
