4th-chapter/done

--- a/04.初始化与清理.md
+++ b/04.初始化与清理.md
@@ -137,3 +137,33 @@ finalize通常使用在两种情况下：
 5. 执行所有出现于字段定义处的初始化动作。
 6. 执行构造器。
 
+
+### 4.5.3 静态块初始化
+
+```java
+public class Spoon {
+  static int i;
+  static {
+    i = 47;
+  }
+}
+```
+
+【静态块】仅执行一次：当首次生成这个类的一个对象时，或者首次访问属于这个类的静态成员时（即使从未生成过这个类的对象）。
+
+### 4.5.4 非静态实例初始化
+
+```java
+public class Spoon {
+  Spoon spoon1;
+  Spoon spoon2;
+  
+  {
+    spoon1 = new Spoon();
+    spoon2 = new Spoon();
+  }
+}
+```
+
+【非静态实例初始化】用来初始化每一个对象的非静态变量。每一次new对象时，都会执行，且在构造器之前执行。
+
