--- a/06.访问控制权限.md
+++ b/06.访问控制权限.md
@@ -17,3 +17,56 @@
 使用某个public类名称的，都必须**指定全名**或者结合**import**关键字。
 
 采用import导入的原因：提供一个管理名字空间的机制。
+
+如果将两个含有相同名称的类库以“*”形式同时导入，会产生冲突。
+
+
+
+这个地方涉及到Java解释器的运行过程：
+
+> 首先，找出环境变量CLASSPATH，CLASSPATH包含一个或多个目录，用作查找*.class*文件的根目录。
+>
+> 从根目录开始，解释器获取包的名称并将每个句点替换成反斜杠，以从CLASSPATH根中产生一个路径名称。比如，*package foo.bar.baz* 就变成了 *foo/bar/baz* 或 *foo\bar\baz*，取决于操作系统。
+>
+> 得到的路径会与CLASSPATH中的各个不同的项相连接，解释器就在这些目录中查找与你所要创建的类名称相关的*.class*文件。
+
+## 6.2 Java访问权限修饰词
+
+public、protected、private和包访问权限四种。
+
+[**01.对象导论**](https://github.com/youngmeng/Java-Notes/blob/develop/01.%E5%AF%B9%E8%B1%A1%E5%AF%BC%E8%AE%BA.md)中介绍了四种访问权限，这里关于protected和包访问权限再说明一点：
+
+> 如果子类继承父类，子类拥有父类的包访问权限的方法，但如果子类和父类不在同一个包中，子类对象无法使用父类的该方法。
+
+---
+
+总结一下四种访问权限：
+
+- 包与包之间进行访问，被访问的包中的类以及类中的成员，需要public修饰。
+- 不同包中的子类可以直接访问父类中被protected权限修饰的成员。
+- 包与包之间可以使用的权限只有两种：public、protected。
+
+**类中成员的访问权限大小：public > protected > 包访问权限（默认）> private**。
+
+|  情景   | public | protected |  默认  | private |
+| :---: | :----: | :-------: | :--: | :-----: |
+| 同一个类中 |   ✅    |     ✅     |  ✅   |    ✅    |
+| 同一个包中 |   ✅    |     ✅     |  ✅   |    ❌    |
+|  子类中  |   ✅    |     ✅     |  ❌   |    ❌    |
+| 不同包中  |   ✅    |     ❌     |  ❌   |    ❌    |
+
+
+
+## 6.3 类的访问权限
+
+- 每个编译单元（文件）都只能有一个public类。
+
+  这表示，每个编译单元都有单一的公共接口，用public类来表示，该接口可以按要求包含众多的支持包访问权限的类。
+
+- public类的名称必须完全和含有该编译单元的文件名相匹配，包括大小写。
+
+- 虽然不是很常用，但编译单元内完全不带public类也是可能的。这种情况下，可以随意对文件命名。
+
+- 类既不可以是private的，也不可以是protected的（除了一个特例：内部类可以是private或protected的）。类的访问权限仅有两种：public、包访问权限。
+
+  ​
