--- a/07.复用类.md
+++ b/07.复用类.md
@@ -34,3 +34,14 @@
 
 ## 7.2 继承语法
 
+当使用继承时，导出类会自动得到基类中所有的域和方法。
+
+当创建一个导出类的对象时，该对象包含了一个基类的子对象，这个子对象被包装在导出类对象内部，且与你用基类直接创建的对象是一样的。
+
+对基类子对象的正确初始化，仅有一种方法来保证：在构造器中调用基类构造器来执行初始化。
+
+- 对于无参构造器，编译器会自动在导出类的构造器中插入对基类构造器的调用，即隐藏了导出类构造器第一行的**super()**。
+- 对于有参构造器，需要在导出类构造器第一行显式的使用super调用基类的构造器。
+
+## 7.3 代理
+
