--- a/07.复用类.md
+++ b/07.复用类.md
@@ -45,3 +45,89 @@
 
 ## 7.3 代理
 
+Java没有提供对代理的直接支持。
+
+**代理是继承与组合之间的中庸之道**。因为将一个成员对象置于所要构造的类中（就像组合），但与此同时在新类中暴露了该成员对象的所有方法（就像继承）。
+
+《Java编程思想》中提供了太空飞船和太空飞船控制模块的例子，把太空飞船的操控交给交给代理类来代理，而代理类又把操控传递给了底层的控制模块对象。
+
+```java
+public class SpaceShipDelegation {
+  private SpaceShipDelegation controls = new SpaceShipControls();
+  
+  public void back(int velocity) {
+    controls.back(velocity);
+  }
+  
+  public void forward(int velocity) {
+    controls.forward(velocity);
+  }
+}
+```
+
+这样做由于可以选择只提供成员对象的方法的子集，因而**代理可以拥有更多的控制力**（因为继承会把所有的方法继承过去，而有的方法可能并不需要）。
+
+个人的理解：把具体的工作传递给控制模块，类似于MVC（model、view、contrller）模型。
+
+## 7.4 结合使用组合和继承
+
+组合和继承结合使用的情况非常常见，但需要注意两个方面。
+
+1. 确保正确清理
+
+   我们无法知道垃圾回收期何时被调用、是否被调用。如果想要清理一些东西，就必须显式地编写一个特殊方法来做这件事，并确保程序必须调用这个方法。
+
+   比如**try-finally**的**finally**子句中的代码一定会被执行，可以将清理逻辑放在finally中，例如输入输出流的关闭。
+
+
+
+
+*垃圾回收器是否被调用以及回收对象的顺序都无法确定。最好的办法是除了内存以外，不能依赖垃圾回收器去做任何事。如果需要清理，最好是编写自己的清理方法，但不要使用**finalize()**.*
+
+
+
+2. 名称屏蔽
+
+如果Java的基类中含有某个已被多次重载的方法，那么在导出类中**重新定义**该方法名称（方法名一样，参数不同）并不会屏蔽其在基类中的任何版本。
+
+如果在导出类中不是重新定义，而是和基类一样的方法及参数，就会屏蔽掉基类对应的方法。
+
+
+
+## 7.5 在组合与继承之间选择
+
+“is-a”（是一个）的关系使用继承来表达，“has-a”（有一个）关系则是用组合来表达。
+
+- 组合选择
+
+  **组合技术通常用于在新类中使用现有类的功能而非新类本身的接口这种情形。**
+
+  *（在Door类中嵌入Window类，是为了使用Window类中的功能rollup或者rolldown）*
+
+  即，在新类中（Door）嵌入某个对象（有所需要的功能，window），新类用户（Person）看到的只是为新类所定义的接口（open、close），而非所嵌入的对象的接口（rollup、rolldown）。为此，就需要在新类中嵌入一个现有类的**private**对象。
+
+  ```java
+  class Window {
+    public void rollup() {}
+    public void rolldown() {}
+  }
+
+  class Door {
+    private Window window = new Window();
+    public void open() {}
+    public void close() {}
+  }
+
+  class Person {
+    private Door door = new Door();
+  }
+  ```
+  ​
+
+- 继承选择
+
+  继承是为了使用某个现有类，并开发一个它的特殊版本。这意味着，你在使用一个通用类，并为了某个特殊需要而将其特殊化。
+
+
+
+
