--- a/07.复用类.md
+++ b/07.复用类.md
@@ -131,3 +131,53 @@ public class SpaceShipDelegation {
 
 
 
+## 7.6 final关键字
+
+final关键字通常表示的含义是「这是无法改变的」。
+
+可能使用到final的三种情况：数据、方法、类。
+
+#### 7.6.1 final数据
+
+final表示的数据恒定不变有两个基本用处：
+
+- 表示一个永不改变的**编译时常量**。
+
+  编译期常量，可以在编译时执行计算式，减轻运行时的负担。
+
+  这类常量必须是**基本数据类型**，必须以关键字final表示，常量定义的时候必须进行初始化。
+
+- 一个运行时被初始化的值，不希望被改变。
+
+  对对象的引用而不是基本类型使用final时，表示**引用恒定不变**。一旦引用被初始化指向一个对象，就无法更改它指向另一个对象，但对象本身却是可以修改的。
+
+一个既是static又是final的域只占用一段不能改变的存储空间。
+
+
+
+【空白final】
+
+空白final是指被声明为final但又未给定初值的域。
+
+无论什么情况，编译器都确保空白final在**使用前**必须被初始化。
+
+空白final在关键字final的使用上提供了更大的灵活性：类中的final域可以根据对象而有所不同，却又保持恒定不变的特性。
+
+
+
+【final参数】
+
+可以在参数列表中将形参指定为final，表示无法在方法中更改参数。
+
+
+
+#### 7.6.2 final方法
+
+使用final方法的目的在于：**明确禁止任何继承类对其覆盖**。
+
+
+
+【final与private关键字】
+
+类中所有的private方法都隐式地指定为是final的。给private方法添加final修饰词，不会增加额外意义。
+
