--- a/07.复用类.md
+++ b/07.复用类.md
@@ -181,3 +181,42 @@ final表示的数据恒定不变有两个基本用处：
 
 类中所有的private方法都隐式地指定为是final的。给private方法添加final修饰词，不会增加额外意义。
 
+覆盖一个父类的private方法（隐含是final的），编译器也不会给出错误信息。对于父类中的private方法，如果在子类中以相同的名称生成一个public、protected或包访问权限方法的话，此时并没有覆盖该方法，只是生成了一个新方法。
+
+#### 7.6.3 final类
+
+使用final类的目的在于：**禁止该类被继承**。
+
+final类中的所有方法都隐式指定为final的，因为无法覆盖它们。给final类中的方法添加final修饰词，没有意义。
+
+
+
+## 7.7 初始化及类的加载
+
+每个类的编译代码都存在于它自己的独立的文件中，该文件只在需要使用程序代码时才会被加载。
+
+***类的代码在初次使用时才加载***。所以，加载发生在创建第一个对象时，或者访问static域或static方法时。
+
+由于构造器也是static方法（尽管static关键字没有显式地写出来），因此更准确地讲：**类是在其任何static成员被访问时加载的**。
+
+
+
+【继承与初始化】
+
+类的加载首先会加载其基类，如果其基类还有基类，那么首先会加载第二个基类，如此类推。
+
+根基类中的static初始化会先被执行，然后是下一个导出类的static初始化，如此类推。
+
+类加载完毕，对象就可以被创建了。首先，通过**将对象内存设为二进制零值**的方式，一举将对象中所有的基本类型设为默认值、对象引用设为null。
+
+然后，基类的构造器会被调用，实例变量会按次序进行初始化，然后执行构造器的其余部分；最后，导出类的构造器会被调用，导出类中的实例变量按次序初始化，执行导出类构造器的其余部分，如此类推。
+
+
+
+---
+
+
+
+## 总结
+
+尽管面向对象对继承极力强调，在设计时，一般优先选择使用组合（或者可能是代理），只在确实必要时才使用继承。
