9th-chapter/9.2-one

--- a/09.接口.md
+++ b/09.接口.md
@@ -32,3 +32,13 @@
 接口用**interface**关键字定义，要让某个类实现该接口，需要使用**implements**关键字。
 
 接口中的方法默认都是**public**的，接口中的域默认都是**public**、**static**和**final**的。
+
+
+
+【完全解耦】
+
+只要一个方法操作的是类而非接口，那么就只能使用这个类及其子类。如果想要将这个方法应用于不在此继承结构中的某个类，就会由于耦合过紧而受到限制。
+
+将接口从具体实现中解耦使得接口可以应用于多种不同的具体实现，代码也就更具可复用性。
+
+客户端程序员遵循接口来编写自己的类；但有时无法修改自己的类（类是被调用而非被创建），可以使用*适配器*设计模式，同时也可以使用*代理*。
