9th-chapter/done

--- a/09.接口.md
+++ b/09.接口.md
@@ -90,3 +90,19 @@ class Hero extends ActionCharacter implements CanFight, CanSwim, CanFly {
 【组合接口时的名字冲突】
 
 覆盖、实现、重载混在一起时，本着一个原则：导出类的接口在导出类中能够找到方法的唯一实现。
+
+【嵌套接口】
+
+嵌套接口可以拥有public、包访问、private可视性。
+
+当实现某个接口时，并不需要实现嵌套在其内部的任何接口。而且，private接口不能在定义它的类之外被实现。
+
+【接口工厂】
+
+可以采用工厂方法设计模式创建框架，将代码与接口的实现分离，使得可以透明地将某个实现替换为另一个实现。
+
+---
+
+## 总结
+
+恰当的原则是优先使用类而不是接口，如果接口的必须性变得非常明确，就进行重构。
